syntax = "proto3";

package userDetail;

service UserDetailService {
    rpc FindOne (ID) returns (SingleData) {}
    rpc FindAll (Empty) returns (MultipleData) {}
    rpc Create (CreateDto) returns (SingleData) {}
    rpc Update (UpdateDto) returns (SingleData){}
    rpc Remove (ID) returns (SingleData){}
}

//paramater
message ID {
    int32 id = 1;
}

message Empty {}

//dto
message CreateDto{
    string firstName = 1;
    string lastName = 2;
    optional int32 avatar = 3;
     int32 userId = 4;
} 

message UpdateDto{
   int32 id = 1;
   CreateDto dto = 2;
} 


//return data
message MultipleData {
    string message = 1;
    int32 statusCode = 2;
    repeated UserDetail data = 3;
    Error error = 4;
}

message SingleData {
    string message = 1;
    int32 statusCode = 2;
    UserDetail data = 3;
    Error error = 4;
}


//entity
message UserDetail {
    int32 id = 1;
    string firstName = 2; 
    string lastName = 3; 
    optional int32 avatar = 4;
    int32 userId = 5;
    string createdAt = 6;
    string lastEditedAt = 7;
}


//Error
message Error {
    string errorMessage = 1;
    int32 errorCode = 2;
}